# DOF5RobotControl

./: .gitignore  .gitmodules  CMakeLists.txt  D5Robot.cpp  D5Robot.h  DOF5RobotControl.cpp  DOF5RobotControl.h  DllApi.cpp  DllApi.h  README.md  main.cpp  test.cpp
lib/NatorControl/: .gitignore  CMakeLists.txt  NatorControl.c  NatorControl.cpp  NatorControl.h  NatorController.cpp  NatorController.h  NatorMotor.cpp  NatorMotor.h  main.c
lib/NatorControl/data/: OpenLoopTest_4095_10000.csv  OpenLoopTest_4095_10000.xlsx
lib/NatorControl/test/: Sample1_Basics.c  Sample2_Simple_Interaction.c
